--- a/index.css
+++ b/index.css
@@ -54,7 +54,7 @@ h1{
     background-color: orangered;
     width: 150px;
     padding: 20px;
-    margin-left: 800px;
+    margin-left: 600px;
     height: 50px;
     display: flex;
     justify-content: center;
@@ -67,7 +67,7 @@ h1{
     background-color: tomato;
     letter-spacing: 1px;
 }
-.Unknown Area{
+.unknown_Area{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -76,7 +76,7 @@ h1{
     margin: 2rem;
 
 }
-.add_item{
+.item_input{
     background: cornsilk;
     outline: none;
     border: 3px solid orange;
